# sbim

./: .gitignore  README.md
examples/samples/: scheme.json  surroundings.json
python/: pyproject.toml
python/seoulgaok_bim_core/: __init__.py  errors.py  io.py  operations.py  options.py  types.py  validators.py
python/tests/: test_smoke.py
schema/: buffer-geometry.schema.json  scheme.schema.json  surroundings.schema.json  units.schema.json
typescript/: package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: errors.ts  geometry.ts  index.ts  io.ts  operations.ts  types.ts
visualizer/: package.json  pnpm-lock.yaml  tsconfig.json
visualizer/src/: BimCanvas.tsx  BuildingMeshVisualizer.tsx  BuildingVisualizerContainer.tsx  GeoCoordinateTransformer.ts  MapFloor.tsx  MapFloorMapBox.tsx  VehicleSimulation.tsx  index.ts
visualizer/src/hooks/: useBuildingData.ts
