[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seoulgaok-bim-core"
version = "0.0.1"
description = "Seoulgaok BIM core — types, IO, operations, validators for scheme.json"
readme = "../README.md"
requires-python = ">=3.11"
authors = [
    { name = "서울가옥", email = "desk@seoulgaok.com" }
]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "datamodel-code-generator>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["seoulgaok_bim_core"]
